--- a/jpa/src/main/resources/application.yml
+++ b/jpa/src/main/resources/application.yml
@@ -25,6 +25,11 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:data.sql
 
 server:
   port: 8080
